--- a/index.html
+++ b/index.html
@@ -1,6 +1,17 @@
+<!DOCTYPE html>
 <html>
+  <head>
+    <meta charset="UTF-8">
+    <title>Vermeulen Dental</title>
+  </head>
   <body>
-    <h1>Vermeulen Dental</h1>
-    <a href="https://vermeulendental.be">Site officiel Vermeulen Dental</a>
+    <h1>Vermeulen Dental – Laboratoire de prothèses dentaires à Uccle</h1>
+    <p>
+      👉 Site officiel :
+      <a href="https://vermeulendental.be">https://vermeulendental.be</a>
+    </p>
+    <p>
+      👉 Prothèses amovibles, dentiers, réparations et ajustements à Uccle.
+    </p>
   </body>
 </html>
